Fixed icons behavior in the .infobox class Wrapping works properly

--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,11 @@ button {
     display: flex;
 }
 
+.infobox > .wrapper{
+    flex-direction: column;
+    align-items: center;
+}
+
 .upper{
     display: flex;
     flex-direction: column;
@@ -111,8 +116,10 @@ button {
 
 .lower {
     display: flex;
+    flex-wrap: wrap;
     margin: 0;
     padding: 0;
+    gap: 16px;
 }
 
 .lower li {
@@ -121,6 +128,7 @@ button {
     align-items: center;
     text-align: center;
     gap: 8px;
+    max-width: 150px;
 }
 
 .icon {
